<resources>
    <string name="app_name">Gadgeothek</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_student_no">Student No</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_password_register">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_url">Server Url</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_save">Save</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_loan">LoanActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="title_activity_tab">TabActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nr">Nr</string>
    <string name="gadget">Gadget</string>
    <string name="pickup">Pickup</string>
    <string name="returndate">Return</string>
</resources>
